Fixing problem area width and min height, so that we no longer need to override it in the only two places it's being used. (ItemEditor and on mobile)

--- a/packages/perseus/src/styles/khan-exercise.css
+++ b/packages/perseus/src/styles/khan-exercise.css
@@ -130,8 +130,6 @@ div.definition {
 
 #problemarea {
     font-size: 14px;
-    width: 70%;
-    min-height: 378px;
     position: relative;
     float: left;
     padding-bottom: 38px;
